<resources>
    <string name="app_name">Beauty Style Frag</string>
    <string name="logo">Логотип</string>
    <string name="name_salon">Салон красоты \n\"СТИЛЬ\"</string>
    <string name="s_hair">Волосы</string>
    <string name="s_nails">Ногти</string>
    <string name="address">Адрес</string>
    <string name="salon_krasoti">Если и преображать себя, то только с профессионалами салона красоты «Сандлер»,
        ведь только здесь вы сможете действительно понять, что значит правильный уход за собственной кожей, и как сделать себя более
        привлекательной вне зависимости от возраста. Также, самые новые технологии здесь уже используются для достижения цели посетителей,
        поэтому салон красоты Красные ворота — это всегда высокий профессионализм мастеров и максимально безболезненные и гигиенические
        процедуры. Кроме того, нельзя не отметить ценовую политику салона, ведь стоимость любой из процедур доступна для каждого посетителя!
        Работники салона красоты систематически повышают свое мастерство, включая внедрение последних инновационных процедур в области косметики
        в свои сеансы, что делает их профессионалами высокого класса и европейского уровня. Подход к каждому посетителю строго индивидуален,
        а за комфортабельным пребыванием посетителя всегда следят, что делает атмосферу релаксационной и доброжелательной.</string>
    <string name="volosi">Мы работаем только по записи!"\n""\n"
       - Стрижки и прически"\n""\n"
       - Окрашивание волос"\n""\n"
       - Лечение волос и кожи головы"\n""\n"
       - Выпрямление волос"\n""\n"
       - Ламинирование волос</string>
    <string name="Address">Контакт"\n"
Адрес: "\n"
Москва, м. Свиблово, Берингов проезд, д 5 (пешком 4 мин.)"\n"
С 10:00 до 21:00, без выходных. "\n"
E-mail: "\n"
rovolos@mail.ru "\n"
Мобильный: "\n"
+7 926 491-89-70</string>
    <string name="note0">Стрижки и причёски</string>
    <string name="note1">Окрашивание волос</string>
    <string name="note2">Лечение волос и кожи головы</string>
    <string name="note3">Выпрямление волос</string>
    <string name="note4">Ламинирование волос</string>
    <string name="razdel">Раздел в разработке</string>
    <string name="kl_manikur">Классический маникюр</string>
    <string name="ap_manikur">Аппаратный маникюр</string>
    <string name="ap_pedikur">Аппаратный педикюр</string>

    <string name="opis_kl_manikur">"Классический обрезной маникюр подходит для любого" +
                    "состояния ногтей.Процедура начинается с обязательной обработки кожи рук специальным" +
                    "дезинфицирующим средством.Ногтям придаётся желаемая форма. Руки погружают в тёплый" +
                    "раствор,после чего размягчённую кутикулу удаляют маникюрными щипчиками, избавляются от" +
                    "заусенцев.В конце процедуры массажными движениями на кожу вокруг ногтя наносится питательное" +
                    "масло-оно оказывает заживляющее воздействие,питает ногтевую пластину."</string>
    <string name="opis_ap_manikur">"Отличное решение для проблемных ногтей.Аппаратный " +
                    "маникюр будет эффективен как при поврежденной ногтевой пластине, так и при различных грибковых" +
                    "инфекциях. Аппаратный маникюр выполняется с использованием специального аппарата:боры и" +
                    "фрезы устраняют ороговевшие участки эпидермиса вокруг ногтевого ложа, придают форму ногтям" +
                    "оставляя кутикулу без повреждений. Маникюр обязательно делают только на сухой коже,что" +
                    "полностью исключает травматизм и риск заражения. Процедура абсолютно безопасна и" +
                    "безболезненна."</string>
    <string name="opis_ap_pedikur">"Благодаря особой технике проведения аппаратного" +
                    "педикюра-решение проблем стопы,вросшего ногтя,трещин,мозолей,грибковых заболеваний-" +
                    "становится реальным. Аппаратный педикюр абсолютно гигиеничен. Стопа не подвергается" +
                    "распариванию в воде, а обрабатывается специальным смягчающим средством для ороговевшей" +
                    "кожи. В качестве инструментов для обработки ногтей,кутикулы и загрубевшей кожи- используют" +
                    "профессиональные насадки,боры и фрезы различных размеров и диаметров. Они удаляют жесткий" +
                    "роговой слой,не трогая здоровую кожу, что делает процедуру полностью безболезненной."</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="res">Сброс</string>
    <string name="str">Старт</string>
    <string name="stp">Стоп</string>

</resources>
