<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/button_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/button_str"
        android:text="@string/res" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView"
        android:layout_below="@+id/button_res"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stp"
        android:id="@+id/button_stp"
        android:layout_below="@+id/textView"

        android:layout_marginTop="15dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str"
        android:id="@+id/button_str"


        />

</RelativeLayout>